# genomic-research

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPENSPEC.md  README.md  README_zh-TW.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  benchmarks.md  genomics_primer.md  hyperparameter_guide.md  troubleshooting.md
genomic_research/: __init__.py  cli.py  demo.py  serve.py
genomic_research/templates/: inference.py  prepare.py  program.md  train.py
notebooks/: architecture_comparison.ipynb  tutorial.ipynb
tests/: test_properties.py  test_smoke.py
